--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "prisma": "^5.13.0",
     "qrcode-terminal": "^0.12.0",
     "twilio": "^4.19.0",
+    "webhooks": "^0.0.4",
     "whatsapp-web.js": "^1.23.0"
   },
   "devDependencies": {
